--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">x-firewall</string>
+    <string name="app_name">X-来电防火墙</string>
+    <string name="run_service">启动来电防火墙</string>
 </resources>
