--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">X-来电防火墙</string>
     <string name="run_service">启动来电防火墙</string>
+    <string name="stop_service">停止来电防火墙</string>
+    <string name="setting_service">设置防火墙规则</string>
 </resources>
