--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="run_service">启动来电防火墙</string>
     <string name="stop_service">停止来电防火墙</string>
     <string name="setting_service">设置防火墙规则</string>
+    <string name="view_log">查看拦截日志</string>
 </resources>
