--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="view_log">查看拦截日志</string>
     <string name="clean">清除</string>
     <string name="back">返回</string>
+    <string name="add_to_white">添加到白名单</string>
+    <string name="add_to_black">添加到黑名单</string>
 </resources>
