--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,10 +10,17 @@
     <string name="back">返回</string>
     <string name="add_to_white">添加到白名单</string>
     <string name="add_to_black">添加到黑名单</string>
-    <string name="select_block_rule">选择拦截规则</string>
+    <string name="select_block_rule">选择拦截规则(点击直接生效)</string>
     <string name="block_black">拦截黑名单</string>
     <string name="allow_white">允许白名单</string>
     <string name="block_all">全部拦截</string>
+
+    <string name="select_mobile_operators">选择运营商</string>
+    <string name="china_mobile">中国移动</string>
+    <string name="china_unicom">中国联通</string>
+    <string name="china_telecom">中国电信</string>
+    <string name="other_operator">其他</string>
+
     <string name="ring_select">选择对方接听提示音</string>
     <string name="user_busy">通话中</string>
     <string name="null_number">空号</string>
@@ -21,7 +28,8 @@
     <string name="shut_down">关机</string>
     <string name="number">号码:</string>
     <string name="rule_setting">设置</string>
+    <string name="rule_setting_save">保存</string>
     <string name="note">说明:</string>
-    <string name="note_text">对方接听后的提示音,是基于号码转移后的提示音,请准备相应的转移号码,然后点击设置按钮</string>
+    <string name="note_text">对方接听后的提示音,是号码呼叫转移后的提示音,请准备相应的转移(空号,欠费,停机)号码,然后点击保存按钮</string>
     <string name="name">名称:</string>
 </resources>
