--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,6 @@
     <string name="rule_setting">设置</string>
     <string name="rule_setting_save">保存</string>
     <string name="note">说明:</string>
-    <string name="note_text">对方接听后的提示音,是号码呼叫转移后的提示音,请准备相应的转移(空号,欠费,停机)号码,然后点击保存按钮</string>
+    <string name="note_text">对方接听后的提示音,是号码呼叫转移后的提示音,请准备相应的转移(空号,欠费,停机)号码,然后点击保存按钮.</string>
     <string name="name">名称:</string>
 </resources>
